# Inmobiliaria-Renato

./: .gitignore  README.md
Inmobiliaria_Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  prompt_para_copiar.md  pyproject.toml
Inmobiliaria_Backend/app/: main.py
Inmobiliaria_Backend/app/agent/: flow.py
Inmobiliaria_Backend/app/api/: admin.py  chat.py  highlevel.py
Inmobiliaria_Backend/app/auth/: admin.py
Inmobiliaria_Backend/app/chat_history/: __init__.py  postgres.py
Inmobiliaria_Backend/app/core/: config.py
Inmobiliaria_Backend/app/prompts/: __init__.py  chat_default.py  onboarding.py
Inmobiliaria_Backend/app/services/: highlevel_client.py  sheet_client.py
Inmobiliaria_Backend/app/storage/: admin_users.py  contacts.py  db.py  prompts.py  settings.py
Inmobiliaria_Backend/scripts/: explore_sheet.py
Inmobiliaria_Frontend/: .env.example  index.html  package-lock.json  package.json
Inmobiliaria_Frontend/src/: App.tsx  index.css
Inmobiliaria_Frontend/src/components/: AgentToggle.tsx  LoginPage.tsx  Logo.tsx  PromptEditor.tsx
Inmobiliaria_Frontend/src/lib/: api.ts
Inmobiliaria_Frontend_Streamlit/: .dockerignore  Dockerfile  app.py  pyproject.toml
