[project]
name = "agente-inmobiliaria"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "google-auth>=2.52.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langchain-postgres>=0.0.17",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "unidecode>=1.4.0",
    "uvicorn[standard]>=0.46.0",
]
